add QuickQouteEmail
