# routes/api.php
@@ -9,5 +9,6 @@ $api->version('v1', function (Router $api) {
     $api->group(['prefix' => 'email'], function(Router $api) {
         $api->post('test', ['uses' => "App\\Api\\V1\\Controllers\\EmailNotification@test"]);
         $api->post('contact_us', ['uses' => "App\\Api\\V1\\Controllers\\EmailNotification@contactUs"]);
+        $api->post('quick_quote', ['uses' => "App\\Api\\V1\\Controllers\\EmailNotification@quickQuote"]);
     });
 });
